--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "tsx src/index.ts --sse",
     "start:stdio": "node dist/src/index.js",
     "build": "eslint --fix ./src && prettier --write \"src/**/*.ts\" && tsc",
-    "test": "jest",
+    "test": "vitest",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
@@ -35,7 +35,8 @@
     "prettier": "^3.5.3",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.32.1",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=20.0.0"
