--- a/manifest-full.json
+++ b/manifest-full.json
@@ -1,5 +1,5 @@
 {
-  "dxt_version": "0.2",
+  "mcpb_version": "0.1",
   "version": "2.2.1",
   "name": "postman-mcp-server-full",
   "display_name": "Postman MCP Server (Full)",
