--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@modelcontextprotocol/sdk": "^1.18.1",
     "dotenv": "^17.2.2",
     "es-toolkit": "^1.39.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "newman": "^6.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
