fixup! fix: mcp registry release

--- a/.github/workflows/mcpb-pack.yaml
+++ b/.github/workflows/mcpb-pack.yaml
@@ -75,6 +75,13 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
+  publish-mcp:
+    needs: build-and-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
       - name: Install MCP Publisher
         run: |
           curl -L "https://github.com/modelcontextprotocol/registry/releases/latest/download/mcp-publisher_$(uname -s | tr '[:upper:]' '[:lower:]')_$(uname -m | sed 's/x86_64/amd64/;s/aarch64/arm64/').tar.gz" | tar xz
