--- a/package.json
+++ b/package.json
@@ -27,27 +27,18 @@
     "access": "public"
   },
   "dependencies": {
-    "@apidevtools/swagger-parser": "^12.0.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
     "dotenv": "^17.2.2",
-    "es-toolkit": "^1.39.10",
-    "express": "^5.1.0",
-    "newman": "^6.2.1"
+    "newman": "^6.2.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@types/express": "^5.0.3",
     "@types/node": "^24",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-unused-imports": "^4.2.0",
-    "fs-extra": "^11.3.2",
-    "jest": "^30.1.3",
-    "json-schema-to-zod": "^2.6.1",
-    "openapi-types": "^12.1.3",
     "prettier": "^3.6.2",
-    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.44.0",
     "vitest": "^3.2.4"
