--- a/manifest-code.json
+++ b/manifest-code.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": "0.3",
   "version": "2.5.0",
-  "name": "postman-mcp-server-minimal",
-  "display_name": "Postman MCP Server (Minimal)",
-  "description": "Connect your AI to your APIs on Postman.",
-  "long_description": "This extension enables AI assistants to interact with the Postman API through Model Context Protocol (MCP). This minimal version includes only the essential tools for basic Postman operations, providing faster performance and simplifying use for common workflows. All secured with your Postman API key.",
+  "name": "postman-mcp-server-code",
+  "display_name": "Postman MCP Server (Code)",
+  "description": "Connect your AI to your APIs on Postman for code generation.",
+  "long_description": "This extension enables AI assistants to interact with the Postman API through Model Context Protocol (MCP). This code version is specifically optimized for code generation workflows, providing tools to extract API specifications, collection structures, and generate language-specific code from Postman collections. All secured with your Postman API key.",
   "author": {
     "name": "Postman, Inc.",
     "email": "help@postman.com",
@@ -24,7 +24,8 @@
     "mcp_config": {
       "command": "node",
       "args": [
-        "${__dirname}/dist/src/index.js"
+        "${__dirname}/dist/src/index.js",
+        "--code"
       ],
       "env": {
         "POSTMAN_API_KEY": "${user_config.postman_api_key}"
@@ -37,9 +38,9 @@
     "mcp",
     "postman-api",
     "collections",
-    "monitors",
-    "mocks",
-    "minimal"
+    "code-generation",
+    "codegen",
+    "sdk"
   ],
   "license": "Apache-2.0",
   "user_config": {
